# Safety-Fundamentals-of-Generative-AI-Spr-26

./: README.md  pyproject.toml
assignment_1/: Task_A_alignment.ipynb  Task_A_reward.ipynb  Task_B.ipynb  Task_C.ipynb
assignment_2/: Part_1.ipynb  Part_2.ipynb  Part_3.ipynb  Part_4.ipynb  Report.tex
