[project]
name = "safety-fundamentals-of-generative-ai-spr-26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "iprogress>=0.4",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "peft>=0.18.1",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "transformers>=5.1.0",
    "trl>=0.27.2",
]
